vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
  - hello-service
  http:
    - route:
      - destination:
          host: hello-service
          subset: v1
        weight: 90
      - destination:
          host: hello-service
          subset: v2
        weight: 10
